Fix some text overflows

--- a/src/sass/partials/_info.scss
+++ b/src/sass/partials/_info.scss
@@ -60,6 +60,9 @@
       .name {
         font-size: 24px;
         font-weight: bold;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
       .status {
@@ -283,6 +286,9 @@
             word-break: break-word;
 
             .name {
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
               margin-bottom: 3px;
             }
 
